--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vuetify 3</title>
+    <title>Relation Generator</title>
+    <link rel="stylesheet" href="/src/assets/styles/main.css" />
 </head>
 
 <body>
