--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W8357RQDZ2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-W8357RQDZ2');
+    </script>
 </body>
 
 </html>
